--- a/Mockup/mockup.css
+++ b/Mockup/mockup.css
@@ -1476,7 +1476,7 @@ a {
 .top {
 	text-align: center!important;
     font-size: 50px;
-    text-decoration: underline solid;
+    /*text-decoration: underline solid; */
     font-size-adjust: auto
 }
 
