FAQ und Inserate Editor überarbeitet

--- a/Mockup/mockup.css
+++ b/Mockup/mockup.css
@@ -1480,6 +1480,17 @@ a {
     font-size-adjust: auto
 }
 
+.hr {
+    
+    border-top: 1px solid black;
+}
+
+.text{
+    text-align: left;
+    font-size: 15px;
+    font-size-adjust: auto
+}
+
 
 /* Colors */
 
